19 Sep 2011: Wouter
	- fix so that if it cannot bind socket the server fails to start.

16 Sep 2011: Wouter
	- fix OSX get of DHCP options to use ipconfig API instead of faulty
	  awk parse.

15 Sep 2011: Wouter
	- fix makefile dependencies for sed-ed output.
	- tag 0.3. (0.2 was distributed with different contents).
	- trunk has 0.4

14 Sep 2011: Wouter
	- icons in higher bitdepth, install and uninstall icons.
	- stoppanels control command for installers to update that panel exe.
	- tag 0.2
	- trunk has 0.3

13 Sep 2011: Wouter
	- pick up SSID (for windows, OSX) to filter trigger with, so an SSID
	  change from the wlan triggers a reprobe.
	- set windres resource files, icons, log-format, useradmpermission
	  and setup.exe script with NSIS, it includes dlls.

12 Sep 2011: Wouter
	- fix fd leaked every second by panel if the daemon was down.
	- more robust outq_delete function in code notation.
	- do not print ID values if mismatch (enabled on verbosity 4).
	- print time of probe with results.
	- fix double-close of FD in acceptfailure case.
	- close log file when daemon exits.

9 Sep 2011: Wouter
	- can override nameserver settings on windows (needs administrator
	  permissions) and clears them away (back to the default) on exit.
	- fix not enough detection of network changes on OSX.
	- get a probe after start on OSX.
	- fix submit of disconnect state, submit "".
	- fix resolvconf writes on OSX: more chance of winning resolv.conf
	  which is a small race what with setting scutil at the same time,
	  and sets it after userlogin because OSX reprobes at user login.

8 Sep 2011: Wouter
	- Fix that windows DHCP hook fires less often: only if list of network
	  and GUID of adapter and IPs changes.
	- unbound-control execute hook.
	- reshook for windows.

7 Sep 2011: Wouter
	- dnssec-triggerd can run as a windows service.
	- windows DHCP hook on network changes.
	- support nm-tool NetworkManager (older version).

6 Sep 2011: Wouter